--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <meta charset="utf-8" />
     <meta name="author" content="Morrow"/>
     <title>The Analytical Protection Agency of Kingdom of Nerds</title>
+    <link rel="stylesheet" href="img/indexstyle.css"/>
 </head>
+<nav>
+    <div class="banner-image">
+    </div>
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <div class="dropdown">
+            <button class="dropbtn">
+                Dropdown
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
+        </div>
+    </div>
+</nav>
 <body>
     <h1>Welcome to Konapa's Website!</h1>
     <p>So you have found the website to the most secret of all orders within Kingdom of Nerds. Excellent work initiate, and may you continue
