--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <a href="#news">News</a>
         <div class="dropdown">
             <button class="dropbtn">
-                Dropdown
+                <h3>Research Divisions</h3>
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="Cultic_Division.html">Cultic Division</a>
+                <a href="Dark_Division.html">Dark Division</a>
+                <a href="Occultic_Division.html">Occultic Division</a>
+                <a href="Religious_Division.html">Religious Division</a>
             </div>
         </div>
     </div>
