--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#news">News</a>
         <div class="dropdown">
             <button class="dropbtn">
-                <h3>Research Divisions</h3>
+                <p>Research Divisions</p>
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
