Worked on the occultic division page

--- a/Dark_Division.html
+++ b/Dark_Division.html
@@ -3,8 +3,30 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="author" content="Morrow" />
+    <link rel="stylesheet" href="img/indexstyle.css"/>
+    <title>The Dark Division</title>
 </head>
+<nav>
+    <div class="banner-image">
+    </div>
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <div class="dropdown">
+            <button class="dropbtn">
+                <p>Research Divisions</p>
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="Cultic_Division.html">Cultic Division</a>
+                <a href="Dark_Division.html">Dark Division</a>
+                <a href="Occultic_Division.html">Occultic Division</a>
+                <a href="Religious_Division.html">Religious Division</a>
+            </div>
+        </div>
+    </div>
+</nav>
 <body>
 
 </body>
