--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     </div>
 </nav>
 <body>
-    <h1>Welcome to Konapa's Website!</h1>
-    <p>So you have found the website to the most secret of all orders within Kingdom of Nerds. Excellent work initiate, and may you continue
-    to keep impressing the Archon and Magi!</p>
+    <h1>Welcome!</h1>
+    <p>Within this website you will find a lot of information related to Konapa: The Analytical Protection Agency of Kingdom of Nerds.
+    Each of the divisions keeps a lot of their main information on the website as well as material that every member of that division
+    should know and have stored away.</p>
 </body>
 </html>
