--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -3,9 +3,45 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="author" content="Morrow"/>
+    <link rel="stylesheet" href="img/indexstyle.css" />
+    <title>Occultic Division</title>
 </head>
+<nav>
+    <div class="banner-image">
+    </div>
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <div class="dropdown">
+            <button class="dropbtn">
+                <p>Research Divisions</p>
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="Cultic_Division.html">Cultic Division</a>
+                <a href="Dark_Division.html">Dark Division</a>
+                <a href="Occultic_Division.html">Occultic Division</a>
+                <a href="Religious_Division.html">Religious Division</a>
+            </div>
+        </div>
+    </div>
+</nav>
 <body>
-
+    <h1>Welcome to the Occultic Division!</h1>
+    <p>The Occultic Division is another of the most dangerous divisions due to its focus on many aspects of the occult and witchcraft. 
+    This division mostly consists of witches, wizards, pagans, and other assorted occultists all working together to form a greater whole 
+    of their practices. Members of this division tend to work closely with the Dark Division due to some overlap between the divisions. </p>
+    
+    <section>
+        <h1>Required Materials</h1>
+        <ul>
+            <li><a href="Occultic_Division_Pdfs/Sabbats Almanac 2021.pdf">Sabbats Almanac 2021</a></li>
+            <li><a href="Occultic_Division_Pdfs/The_Egyptian_Book_of_the_Dead.pdf">The Egyptian Book of the Dead</a></li>
+            <li><a href="Occultic_Division_Pdfs/Complete Book of 1001 Spells.pdf">1001 Spells</a></li>
+            <li><a href="Occultic_Division_Pdfs/Star Ruby Ritual.pdf">The Star Ruby Ritual</a></li>
+            <li><a href="Occultic_Division_Pdfs/book_of_shadows_scott_cunningham.pdf">Scott Cunningham's Book of Shadows</a></li>
+        </ul>
+    </section>
 </body>
 </html>
