Added blank targets to the occultic division links

--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -36,11 +36,11 @@
     <section>
         <h1>Required Materials</h1>
         <ul>
-            <li><a href="Occultic_Division_Pdfs/Sabbats Almanac 2021.pdf">Sabbats Almanac 2021</a></li>
-            <li><a href="Occultic_Division_Pdfs/The_Egyptian_Book_of_the_Dead.pdf">The Egyptian Book of the Dead</a></li>
-            <li><a href="Occultic_Division_Pdfs/Complete Book of 1001 Spells.pdf">1001 Spells</a></li>
-            <li><a href="Occultic_Division_Pdfs/Star Ruby Ritual.pdf">The Star Ruby Ritual</a></li>
-            <li><a href="Occultic_Division_Pdfs/book_of_shadows_scott_cunningham.pdf">Scott Cunningham's Book of Shadows</a></li>
+            <li><a href="Occultic_Division_Pdfs/Sabbats Almanac 2021.pdf" target="_blank">Sabbats Almanac 2021</a></li>
+            <li><a href="Occultic_Division_Pdfs/The_Egyptian_Book_of_the_Dead.pdf" target="_blank">The Egyptian Book of the Dead</a></li>
+            <li><a href="Occultic_Division_Pdfs/Complete Book of 1001 Spells.pdf" target="_blank">1001 Spells</a></li>
+            <li><a href="Occultic_Division_Pdfs/Star Ruby Ritual.pdf" target="_blank">The Star Ruby Ritual</a></li>
+            <li><a href="Occultic_Division_Pdfs/book_of_shadows_scott_cunningham.pdf" target="_blank">Scott Cunningham's Book of Shadows</a></li>
         </ul>
     </section>
 </body>
