--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -11,8 +11,8 @@
     <div class="banner-image">
     </div>
     <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
+        <p><a href="#home">Home</a></p>
+        <p><a href="#news">News</a></p>
         <div class="dropdown">
             <button class="dropbtn">
                 <p>Research Divisions</p>
