--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -11,7 +11,12 @@
     <div class="banner-image">
     </div>
     <div class="navbar">
-        <p><a href="#home">Home</a></p>
+        <button>
+            <p><a href="#home">Home</a></p>
+        </button>
+        <button>
+            <p><a href="#news">News</a></p>
+        </button>
         <p><a href="#news">News</a></p>
         <div class="dropdown">
             <button class="dropbtn">
