--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -15,12 +15,12 @@
             <p>Research Divisions</p>
             <i class="fa fa-caret-down"></i>
         </button>
-        <button class="dropbtn">
+        <button>
             <p>Research Divisions</p>
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown">
-            <button class="dropbtn">
+            <button>
                 <p>Research Divisions</p>
                 <i class="fa fa-caret-down"></i>
             </button>
