--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -60,12 +60,48 @@
             <li><a href="https://docs.google.com/spreadsheets/d/1J7jmeOApLQyOkPKPsdBLIlk8sUCYwkc1uwhl646KHe4/edit#gid=1827971205" target="_blank">Google Folder: Has a lot of useful beginning texts</a></li>
             <li><a href="https://docs.google.com/document/d/11HWYRKltQdE0d7W_rLK-2v4q-adKlryVohaAVYsN6f4/edit" target="_blank">Witchcraft 101</a></li>
             <li><a href="https://exemplore.com/wicca-witchcraft/What-Type-of-Witch-Am-I" target="_blank">Witch Paths</a></li>
+            <li><a href="http://www.angelfire.com/ca5/witchcraftstudies/witchcraft_terminology.htm" target="_blank">Witchcraft Terminology</a></li>
+            <li><a href="https://blackwitchcoven.com/how-to-do-a-basic-candle-dressing/" target="_blank">Basic Candle Dressing</a></li>
         </ul>
+
         <h1>Setting up a Book of Shadows/Grimore</h1>
         <ul>
             <li><a href="https://docs.google.com/document/d/1ENPuE-ztecnWFtvlaFUzT_0qkZEbw3K3wrGjw89hvNY/edit" target="_blank">Google Doc</a></li>
             <li><a href="https://www.learnreligions.com/make-a-book-of-shadows-2562826" target="_blank">9 Things to include in your Book of Shadows</a></li>
         </ul>
+
+        <h1>Things to Research as a Beginning Witch</h1>
+        <ol>
+            <li>The History of Witchcraft</li>
+            <li>Types of Witches</li>
+            <li>Difference between Witchcraft, Wiccan, and Paganism</li>
+            <li>Types of Magick</li>
+            <li>Types of Spells</li>
+            <li>Types of Divination</li>
+            <li>Grounding</li>
+            <li>Centering</li>
+            <li>Sigils</li>
+            <li>Symbols</li>
+            <li>Talismens, Charms, and Amulets</li>
+            <li>Grimoires/BoS</li>
+            <li>Herbs</li>
+            <li>Candles</li>
+            <li>Color Correspondance</li>
+            <li>Oils</li>
+            <li>Incense</li>
+            <li>How to protect yourself</li>
+            <li>Altars</li>
+            <li>Crystals</li>
+            <li>Moon Phases</li>
+            <li>Energy and how to manipulate it</li>
+            <li>The elements</li>
+            <li>Familiars</li>
+            <li>Auras</li>
+            <li>Meditation</li>
+            <li>Spirits</li>
+            <li>Astrology</li>
+            <li>Deities</li>
+        </ol>
     </section>
 </body>
 </html>
