--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -11,11 +11,11 @@
     <div class="banner-image">
     </div>
     <div class="navbar">
-        <button>
+        <button class="dropdown">
             <p>Research Divisions</p>
             <i class="fa fa-caret-down"></i>
         </button>
-        <button>
+        <button class="dropdown">
             <p>Research Divisions</p>
             <i class="fa fa-caret-down"></i>
         </button>
