--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -15,10 +15,16 @@
             <p>Research Divisions</p>
             <i class="fa fa-caret-down"></i>
         </button>
+        <div class="dropdown-content">
+
+        </div>
         <button class="dropdown">
             <p>Research Divisions</p>
             <i class="fa fa-caret-down"></i>
         </button>
+        <div class="dropdown-content">
+
+        </div>
         <div class="dropdown">
             <button class="dropbtn">
                 <p>Research Divisions</p>
