added BoS links

--- a/Occultic_Division.html
+++ b/Occultic_Division.html
@@ -74,6 +74,9 @@
         <ul>
             <li><a href="https://docs.google.com/document/d/1ENPuE-ztecnWFtvlaFUzT_0qkZEbw3K3wrGjw89hvNY/edit" target="_blank">Google Doc</a></li>
             <li><a href="https://www.learnreligions.com/make-a-book-of-shadows-2562826" target="_blank">9 Things to include in your Book of Shadows</a></li>
+            <li><a href="https://witchipedia.com/how-to/how-to-create-your-book-of-shadows/" target="_blank">Witchapedia: How to Create A Book of Shadows</a></li>
+            <li><a href="https://medium.com/coffee-house-writers/create-magickal-book-of-shadows-ddb3c5053b07" target="_blank">Creative Book of Shadows Ideas</a></li>
+            <li><a href="https://wiccanow.com/the-book-of-shadows-and-everything-you-need-to-know/" target="_blank">Everything you Need to Know about the Book of Shadows</a></li>
         </ul>
 
         <h1>Things to Research as a Beginning Witch</h1>
